# LearnOpenGL

./: .gitmodules  CMakeLists.txt  main.cpp  shader.h
resources/: shader.fs  shader.vs
